version/0.41/_sources/api/solver/_autosummary/settings/velocity_inlet_1_child.rst.txt
:orphan:

.. _velocity_inlet_1_child:

velocity_inlet_child
====================

.. autoclass:: ansys.fluent.core.generated.solver.settings_261.velocity_inlet_1_child
    :show-inheritance:

.. rubric:: Attributes

========================================   =================================================================

Attribute                                                                                            Summary

========================================   =================================================================
:ref:`name <name_5>`                                                                     Name of the object.

:ref:`phase <phase_50>`                        Provides an object description for phase-specific conditions.

:ref:`momentum <momentum_10>`                         Allows to change momentum model variables or settings.

:ref:`turbulence <turbulence_5>`                    Allows to change turbulence model variables or settings.

:ref:`thermal <thermal_5>`                             Allows to change thermal model variables or settings.

:ref:`radiation <radiation_6>`                               Radiation settings for this boundary-condition.

:ref:`species <species_8>`                             Allows to change species model variables or settings.

:ref:`discrete_phase <discrete_phase_1>`                   Allows to change DPM model variables or settings.

:ref:`multiphase <multiphase_7>`                    Allows to change multiphase model variables or settings.

:ref:`potential <potential>`                         Allows to change potential model variables or settings.

:ref:`structure <structure_1>`                       Allows to change structure model variables or settings.

:ref:`uds <uds>`                                           Allows to change UDS model variables or settings.

:ref:`icing <icing_1>`                                   Allows to change icing model variables or settings.

:ref:`geometry <geometry_7>`                          Allows to change geometry model variables or settings.

========================================   =================================================================

.. rubric:: Methods

======================================   ======================================================================================================================

Method                                                                                                                                                  Summary

======================================   ======================================================================================================================
:ref:`display <display_2>`                   Show the selected zone surface. If the surface does not exist, this command creates it first and then displays it.

:ref:`create_surface <create_surface>`                                                                                        Create surface for selected zone.

======================================   ======================================================================================================================

.. rubric:: Included in:

==========================================   ===========================================

Parent                                                                           Summary

==========================================   ===========================================
:ref:`velocity_inlet_1 <velocity_inlet_1>`       Settings for boundary-condition object.

==========================================   ===========================================

